--- a/exe_02_babel.html
+++ b/exe_02_babel.html
@@ -18,7 +18,7 @@
 
                 static propTypes: {
                     name: React.PropTypes.string,
-                    level: React.PropTypes.number,
+                    level: React.PropTypes.number
                 }
 
                 render()
