--- a/exe_02_babel.html
+++ b/exe_02_babel.html
@@ -15,17 +15,18 @@
         <script type="text/babel">
             class HelloWorldComponent extends React.Component
             {
-
-                static propTypes: {
-                    name: React.PropTypes.string,
-                    level: React.PropTypes.number
-                }
-
                 render()
                 {
                     return <h1> {this.props.name} el nivel es { this.props.level } </h1>
                 }
             };
+
+            HelloWorldComponent.propTypes = {
+                    name: React.PropTypes.string,
+                    level: React.PropTypes.number 
+            }
+
+
             ReactDOM.render(<HelloWorldComponent name="Goku" level={3} />, document.getElementById('container'));
 
         </script> 
