ADD: EXE 07 GokuChat

--- a/exe_07_gokuchat/index.html
+++ b/exe_07_gokuchat/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Exe 6 - React.js</title>
-        <link rel="stylesheet" type="text/css" href="estilos_exe_05.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
 
