ADD: socket.io and node.js

--- a/exe_07_gokuchat/index.html
+++ b/exe_07_gokuchat/index.html
@@ -2,12 +2,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Exe 6 - React.js</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="app.css">
     </head>
     <body>
 
         <section id="container"></section>
 
-        <script src="build.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
