--- a/exe_08_router/index.html
+++ b/exe_08_router/index.html
@@ -1,7 +1,8 @@
 <!doctype>
 <html>
     <head>
-        <title>React Router</title>    
+        <meta charset="UTF-8">
+        <title>React Router</title>
     </head>
     <body>
         <div id="container"></div>
